--- a/samples/android-app/src/main/res/layout/item_detail.xml
+++ b/samples/android-app/src/main/res/layout/item_detail.xml
@@ -6,4 +6,4 @@
           android:layout_height="match_parent"
           android:padding="16dp"
           android:textIsSelectable="true"
-          tools:context="by.egorr.myapplication.ItemDetailFragment"/>
+          tools:context="org.jlleitschuh.gradle.ktlint.android.ItemDetailFragment"/>
