--- a/samples/android-app/src/main/res/layout/activity_item_detail.xml
+++ b/samples/android-app/src/main/res/layout/activity_item_detail.xml
@@ -4,7 +4,7 @@
                                                  android:layout_width="match_parent"
                                                  android:layout_height="match_parent"
                                                  android:fitsSystemWindows="true"
-                                                 tools:context="by.egorr.myapplication.ItemDetailActivity"
+                                                 tools:context="org.jlleitschuh.gradle.ktlint.android.ItemDetailActivity"
                                                  tools:ignore="MergeRootFrame">
 
     <android.support.design.widget.AppBarLayout
