--- a/samples/android-app/src/main/res/layout/activity_item_list.xml
+++ b/samples/android-app/src/main/res/layout/activity_item_list.xml
@@ -5,7 +5,7 @@
                                                  android:layout_width="match_parent"
                                                  android:layout_height="match_parent"
                                                  android:fitsSystemWindows="true"
-                                                 tools:context="by.egorr.myapplication.ItemListActivity">
+                                                 tools:context="org.jlleitschuh.gradle.ktlint.android.ItemListActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
