--- a/samples/android-app/src/main/res/layout/item_list.xml
+++ b/samples/android-app/src/main/res/layout/item_list.xml
@@ -3,11 +3,11 @@
                                         xmlns:app="http://schemas.android.com/apk/res-auto"
                                         xmlns:tools="http://schemas.android.com/tools"
                                         android:id="@+id/item_list"
-                                        android:name="by.egorr.myapplication.ItemListFragment"
+                                        android:name="org.jlleitschuh.gradle.ktlint.android.ItemListFragment"
                                         android:layout_width="match_parent"
                                         android:layout_height="match_parent"
                                         android:layout_marginLeft="16dp"
                                         android:layout_marginRight="16dp"
                                         app:layoutManager="LinearLayoutManager"
-                                        tools:context="by.egorr.myapplication.ItemListActivity"
+                                        tools:context="org.jlleitschuh.gradle.ktlint.android.ItemListActivity"
                                         tools:listitem="@layout/item_list_content"/>
